// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading should render 1`] = `
<div>
  <div
    class="css-sidcim"
  >
    <p
      class="chakra-text css-12b1bq9"
    >
      Loading
    </p>
  </div>
  <span
    class="chakra-env"
    hidden=""
  />
</div>
`;

exports[`loading should render custom text 1`] = `
<div>
  <div
    class="css-sidcim"
  >
    <p
      class="chakra-text css-12b1bq9"
    >
      Loading memes
    </p>
  </div>
  <span
    class="chakra-env"
    hidden=""
  />
</div>
`;

exports[`loading should render custom text and size 1`] = `
<div>
  <div
    class="css-n4refw"
  >
    <p
      class="chakra-text css-12b1bq9"
    >
      Loading memes
    </p>
  </div>
  <span
    class="chakra-env"
    hidden=""
  />
</div>
`;
